add css transitions and animations, add a table

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
+        <section class="hero" id="section-1">
             <div>
                 <h1>Welcome to Our Online Store</h1>
                 <p>Discover the best products at unbeatable prices</p>
                 <button>Shop Now</button>
             </div>
-        </section>
+        </section class="hero">
         <section>
             <div>
                 <h1>Shop By Category</h1>
@@ -35,14 +35,53 @@
                 <button></button>
             </div>
         </section>
-        <section>
+        <section class="hero">
             <div>
                 <h1>Featured Products</h1>
                 <p></p>
                 <button></button>
             </div>
+            <div class="table-container">
+                <table >
+                    <thead>
+                        <tr>
+                            <th rowspan="2">Product</th>
+                            <th rowspan="2">Price</th>
+                            <th rowspan="2">Features</th>
+                            <th rowspan="1" colspan="2">Details</th>
+                        </tr>
+                        <tr>
+                            <th>Size</th>
+                            <th>Weight</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Product 1</td>
+                            <td>$49.99</td>
+                            <td>Lorem Ipsum dolor sit amet</td>
+                            <td>Large</td>
+                            <td>1.5kg</td>
+                        </tr>
+                        <tr>
+                            <td>Product 2</td>
+                            <td>$59.99</td>
+                            <td>Lorem Ipsum dolor sit amet</td>
+                            <td>Medium</td>
+                            <td>1.2kg</td>
+                        </tr>
+                        <tr>
+                            <td>Product 3</td>
+                            <td>$89.99</td>
+                            <td>Lorem Ipsum dolor sit amet</td>
+                            <td>Small</td>
+                            <td>0.8kg</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
-        <section>
+        <section class="hero" id="section-4">
             <div>
                 <h1>Customer Testimonials</h1>
                 <p></p>
@@ -51,6 +90,6 @@
         </section>
     </main>
     <footer>
-        <p>2024 Your E-COmmerce Store. All rights reserved.</p>
+        <p>&copy; 2024 Your E-COmmerce Store. All rights reserved.</p>
     </footer>
 </body>
